# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md
src/: glad.c  main.cpp  read_file.cpp  shader.cpp
src/include/: read_file.hpp  shader.hpp
src/include/glad/: glad.h
src/shaders/: vertex.vsh
